src/objects/Competitor__c.object
<CustomObject>
    <description>The competitor object store records against opportunities to track other agency type accounts that are competing on a deal for a prospect. Records in this object are created manually by users during the life cycle of an opportunity.</description>
    <fields>
        <fullName>Competitor_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The agency against which Mosaic is competing on this opportunity</inlineHelpText>
        <label>Competitor Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Type</field>
                <operation>equals</operation>
                <value>Agency</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Competitors</relationshipLabel>
        <relationshipName>Competitors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Incumbent__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates whether or not this competing agency is the incumbent at this prospect</inlineHelpText>
        <label>Incumbent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notes_Comments__c</fullName>
        <inlineHelpText>Any additional notes or comments about this competitor</inlineHelpText>
        <label>Notes/Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Associated opportunity where Mosaic is competing against this agency</inlineHelpText>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Competitors</relationshipLabel>
        <relationshipName>Competitors</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Competitor</label>
    <nameField>
        <displayFormat>C-{000000}</displayFormat>
        <label>Competitor ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Competitors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>